--- a/src/styles/layout/_objective.scss
+++ b/src/styles/layout/_objective.scss
@@ -9,14 +9,14 @@ $font-primary: #00E0B3;
     align-items: center;
     gap: 8px;
     width: 100%;
-    height: 80%;
-    padding: clamp(0.625rem, -2.2321rem + 3.5714vw, 2.5rem);;
+    height: clamp(8.125rem, -8.0655rem + 20.2381vw, 18.75rem);
+    padding: clamp(0.625rem, -2.2321rem + 3.5714vw, 2.5rem);
     
     &_block {
-        flex: 1 1 0%;
-        height: 100%;
         @include border;
         @include flex-col;
+        flex: 1 1 0%;
+        height: 100%;
         gap: 5px;
         padding: clamp(0.625rem, -0.3274rem + 1.1905vw, 1.25rem);
         cursor: pointer;
@@ -45,7 +45,7 @@ $font-primary: #00E0B3;
 .ObjectiveImg {
     position: absolute;
     right: 0;
-    width: clamp(7rem, -5.1905rem + 15.2381vw, 15rem);;
+    width: clamp(9rem, -0.1429rem + 11.4286vw, 15rem);
     transform: translateY(-2rem);
     z-index: 0;
 }
